--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </div>
                   <div class="col-md-9">
                       <h2>Zack Erna</h2>
-                      <p> <em> Senior Web Designer and Brand Creative Specialist </em> <br> Full Website Development - UI design - WordPress Expert <br>
+                      <p> <em> Senior Web Designer and Brand Creative Specialist </em> <br> Full Website Development - Dreamweaver Wizard - WordPress Expert <br>
                         Complete Shopify and Wix  Customization <br> 
                         Web Content Research and Writing  <br>
                      Logo, Letterhead and Business Card Design
